Se añadieron los ultimos algoritmos del sistema.

--- a/web/index.html
+++ b/web/index.html
@@ -75,7 +75,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
                     </form>
                 </li> 
                 <li>
-                    <form method="post" action="ReservationsInProcess">
+                    <form method="post" action="ReservationsInProcess.jsp">
 
                         <button type="submit" class="btn btn-dark">Reservaciones en proceso</button>
 
