Ultimos ajustes del proyecto.

--- a/web/index.html
+++ b/web/index.html
@@ -39,7 +39,9 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
     <body>
 
         <h1 class="headier">
-            <img src="UCR_LOGO.png" alt="Alternative text for the image" class="UCR-img"> University of Costa Rica. Faculty Accommodation Service.
+            <img src="UCR_LOGO.png" alt="Alternative text for the image" 
+                 class="UCR-img"> Universidad de Costa Rica. 
+            Hospedaje de profesores.
         </h1>
 
 
@@ -51,22 +53,26 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
                 <li>  <img src="UCR_LOGO_NEGRO.png" alt=""/> </li>
                 <li>
                     <form method="post" action="reservar.html">
-                        <button type="submit" class="btn btn-dark">Reserve</button>
+                        <button type="submit" class="btn btn-dark">
+                            Reservar</button>
                     </form>
                 </li> 
                 <li>
                     <form method="post" action="Reservations.jsp">
-                        <button type="submit" class="btn btn-dark">Reservations</button>
+                        <button type="submit" class="btn btn-dark">
+                            Reservaciones</button>
                     </form>
                 </li> 
                 <li>
                     <form method="post" action="ReservationsHistory.jsp">
-                        <button type="submit" class="btn btn-dark">Reservation History</button>
+                        <button type="submit" class="btn btn-dark">Historial de
+                            reservaciones</button>
                     </form>
                 </li> 
                 <li>
                     <form method="post" action="ReservationsInProcess.jsp">
-                        <button type="submit" class="btn btn-dark">Reservations in Process</button>
+                        <button type="submit" class="btn btn-dark">Reservaciones
+                            concluidas</button>
                     </form>
                 </li>
             </ul>
@@ -74,7 +80,8 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
 
         <script src="JSC.js" charset="UTF-8"></script>
         <footer class="footer">
-            <p>© 2023 Universidad de Costa Rica - Tel. 2511-4000. Aviso Legal. Última actualización: julio, 2023</p>
+            <p>© 2023 Universidad de Costa Rica - Tel. 2511-4000. Aviso Legal. 
+                Última actualización: julio, 2023</p>
         </footer>
     </body>
 </html>
