--- a/web/reservar.html
+++ b/web/reservar.html
@@ -83,8 +83,8 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
                 var bed = localStorage.getItem('bed');
                 var message = 'Active reservations:\n\n';
 
-                if (checkInDate && checkInTime && checkOutDate 
-                        && checkOutTime && reservationName && 
+                if (checkInDate && checkInTime && checkOutDate
+                        && checkOutTime && reservationName &&
                         reservationDate && room && bed) {
                     message += 'Check-in: ' + checkInDate + ' ' + checkInTime + '\n';
                     message += 'Check-out: ' + checkOutDate + ' ' + checkOutTime + '\n';
@@ -106,11 +106,11 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
                 for (var hour = 0; hour < 24; hour++) {
                     for (var minute = 0; minute < 60; minute += 30) {
                         var timeText = pad(hour) + ':' + pad
-                        (minute) + ':' + pad(seconds);
+                                (minute) + ':' + pad(seconds);
                         var checkInOption = new Option
-                        (timeText, timeText, timeText);
+                                (timeText, timeText, timeText);
                         var checkOutOption = new Option
-                        (timeText, timeText, timeText);
+                                (timeText, timeText, timeText);
                         selectCheckInTime.add(checkInOption);
                         selectCheckOutTime.add(checkOutOption);
                     }
@@ -152,12 +152,12 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
                 const reservationName = document.querySelector(
                         'input[name="reservationName"]').value;
                 const reservedId = document.querySelector
-                ('input[name="reservedId"]').value;
+                        ('input[name="reservedId"]').value;
                 const reservedName = document.querySelector
-                ('input[name="reservedName"]').value;
-                
+                        ('input[name="reservedName"]').value;
+
                 // Add the data to the array
-                data.push({ reservedName, reservedId, reservationName });
+                data.push({reservedName, reservedId, reservationName});
 
                 // Update the data list
                 updateDataList();
@@ -183,10 +183,10 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
                 for (let i = 1; i < data.length; i++) {
                     const key = data[i];
                     let j = i - 1;
-                    while (j >= 0 && data[j].name.toLowerCase() > 
+                    while (j >= 0 && data[j].name.toLowerCase() >
                             key.name.toLowerCase()) {
                         data[j + 1] = data[j];
-                       j = j - 1;
+                        j = j - 1;
                     }
                     data[j + 1] = key;
                 }
@@ -195,12 +195,47 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
                 updateDataList();
             }
         </script>
+        <style>
+            .headier {
+                background-color: #41ade7;
+                background-size: 7px;
+                font-size: 25px; /* Font size */
+                font-weight: bold; /* Font weight */
+                border-bottom: 2px solid black;
+                border-bottom-color: #323232;
+            }
+            .footer {
+                background-color: #323232;
+                position: absolute;
+                bottom: 0;
+                width: 100%;
+                color: #ffffff;
+            }
+            .UCR-img {
+                width: 125px;
+                height: auto;
+            }
+
+
+            .bodyColor{
+
+                background-color:  #e6e6e6 ; /* Background color of the body */
+
+            }
+        </style>
     </head>
 
-    <body onload="loadHours();">
+    <body  onload="loadHours();" class="bodyColor">
+
+        <h1 class="headier">
+            <img src="UCR_LOGO.png" alt="Alternative text for the image" 
+                 class="UCR-img"> Universidad de Costa Rica. 
+            Hospedaje de profesores.
+        </h1>
+
         <div class="container mt-4">
             <div id="dataEntryForm">
-                <h2>Enter Reservation Details</h2>
+                <h2>Digite los datalles de la reservación</h2>
                 <form method="post" action="reservationValidation.jsp">
                     <div class="form-group">
                         <label for="checkInDate">Fecha de entrada:</label>
@@ -257,9 +292,11 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
                         </select>
                     </div>
                     <input type="submit" value="Reservar" class="btn-primary" 
-                           onclick="addData(event)>
-                </form>
+                           onclick="addData(event) >
+                                       </form>
 
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" type="text/javascript"></script>
-    </body>
-</html>
+                                       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" type="text/javascript"></script>
+
+                    </body>
+
+                    </html>
